--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,10 @@
     package="com.androidworks.nikhil.infymoney">
 
     <uses-permission android:name="android.permission.READ_SMS" />
-    <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.SEND_SMS" />
 
     <application
+        android:name=".utils.Application"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,14 +14,14 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ui.MainActivity"></activity>
         <activity android:name=".ui.SMSActivity">
+
+        </activity>
+        <activity android:name=".ui.AddFundsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".ui.AddFundsActivity">
-
         </activity>
 
         <receiver android:name=".utils.SmsReciever">
