--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.androidworks.nikhil.infymoney">
 
     <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
 
     <application
@@ -14,21 +15,26 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ui.MainActivity"></activity>
         <activity android:name=".ui.SMSActivity">
-
-        </activity>
-        <activity android:name=".ui.AddFundsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.AddFundsActivity">
 
-        <receiver android:name=".utils.SmsReciever">
-            <intent-filter>
+        </activity>
+
+        <receiver
+            android:name=".utils.SmsReceiver"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="android.permission.BROADCAST_SMS">
+            <intent-filter android:priority="2147483647">
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
+
     </application>
 
 </manifest>
